--- a/dinner.html
+++ b/dinner.html
@@ -154,26 +154,33 @@
       // Display all recipes
       function displayAllRecipes() {
         const recipeGrid = document.querySelector(".recipe-grid");
-        displayRecipes([], recipeGrid);
+        displayRecipes(null, recipeGrid);
       }
 
       // Display recipes in grid
       function displayRecipes(recipesToDisplay, container) {
         const allRecipes = [...dinnerRecipes, ...getUserRecipes()];
-        const filteredRecipes = recipesToDisplay.length
-          ? recipesToDisplay
-          : allRecipes.filter((r) => r.category === "dinner");
+        const filteredRecipes =
+          recipesToDisplay && recipesToDisplay.length > 0
+            ? recipesToDisplay
+            : allRecipes.filter((r) => r.category === "dinner");
 
         container.innerHTML = filteredRecipes
           .map((recipe) => {
             const isUserRecipe = recipe.id && recipe.id.startsWith("recipe_");
+            const recipeUrl = isUserRecipe
+              ? `recipe-detail.html?id=${recipe.id}`
+              : recipe.url;
+
             return `
             <div class="recipe-card">
               <div class="recipe-image">${recipe.emoji || "🍝"}</div>
               <div class="recipe-info">
                 <h3>${recipe.name}</h3>
                 <div class="recipe-meta-inline">
-                  <span class="difficulty ${recipe.difficulty || "medium"}">${recipe.difficulty || "Medium"}</span>
+                  <span class="difficulty ${recipe.difficulty || "medium"}">${
+                    recipe.difficulty || "Medium"
+                  }</span>
                   <span class="rating">${"⭐".repeat(recipe.rating || 4)}</span>
                   <span class="time">${recipe.prepTime || "25 mins"}</span>
                 </div>
@@ -187,7 +194,7 @@
                   `
                       : ""
                   }
-                  <a href="${recipe.url}" class="view-btn">👁️ View Recipe</a>
+                  <a href="${recipeUrl}" class="view-btn">👁️ View Recipe</a>
                 </div>
               </div>
             </div>
@@ -198,7 +205,13 @@
 
       // Get user recipes from localStorage
       function getUserRecipes() {
-        return JSON.parse(localStorage.getItem("recipes") || "[]");
+        const recipes = JSON.parse(localStorage.getItem("recipes") || "[]");
+        // Filter out any fish recipes if they exist
+        return recipes.filter(
+          (recipe) =>
+            !recipe.name.toLowerCase().includes("fish") &&
+            !recipe.name.toLowerCase().includes("fried"),
+        );
       }
 
       // Edit user recipe
